implements JWT Middleware, added Diary Routes, controller, services and repositories
